[package]
name = "tokio-rustls"
version = "0.25.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rustls/tokio-rustls"
homepage = "https://github.com/rustls/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2021"
rust-version = "1.63"
exclude = ["/.github", "/examples", "/scripts"]

[dependencies]
tokio = "1.0"
pki-types = { package = "rustls-pki-types", version = "1" }

[dependencies.rustls]
git = "https://github.com/Pencil-Yao/rustls"
branch = "231205-smx"
default-features = false

[features]
default = ["logging", "tls12", "ring"]
early-data = []
logging = ["rustls/logging"]
ring = ["rustls/ring"]
tls12 = ["rustls/tls12"]

[dev-dependencies]
argh = "0.1.1"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3.1"
lazy_static = "1.1"
rustls-pemfile = "2"

[devdependencies.webpki-roots]
git = "https://github.com/Pencil-Yao/webpki-roots"
branch = "231205-smx"
